# Pycolmat

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
customfmt/: __init__.py  checker.py  cli.py  discovery.py  doctor.py  formatter.py  indexer.py  io.py  rename_plan.py  rename_symbol_plan.py  rename_symbol_render.py  renamer.py  types.py
customfmt/rules/: class_body_alignment.py  final_newline.py  hoisting.py  indentation.py  line_endings.py  naming.py  self_assignment_alignment.py  trailing_whitespace.py
customfmt/symbols/: ast_indexer.py  import_scanner.py  model.py  project_graph.py  resolver.py  scopes.py
docs/: design-method-attribute-rename.md  design-method-rename.md  design-statement-composer-pipeline.md
symbols/: __init__.py  ast_indexer.py  model.py
tests/: conftext.py  statement_composer_test_fixture.py  statement_composer_test_result.py  statement_composer_text_result.py  test_class_body_alignment.py  test_cli.py  test_customfmt.py  test_discovery.py  test_doctor.py  test_final_newline.py  test_hoisting.py  test_ignore.py  test_import_scanner.py  test_indentation.py  test_index.py  test_line_endings.py  test_naming.py  test_project_refs.py  test_rename.py  test_rename_plan.py  test_rename_symbol_plan.py  test_resolver.py  test_self_assignment_alignment.py  test_trailing_whitespace.py  trailing_whitespace.py
